--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
 			      <span>Don't have an account?<a href="#" class="create">Create</a></span>
 			   </div>
 			   </div>
-			   
+			   <div class="txt">
+			       <h3>WELCOME BACK</h3>
+				   <p>
+				      Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+				   </p>
+			   </div>
 			   <div class="img_box">
 			       <img src="1.png" alt="" />
 			   </div>
